# Fractal

./: .env  .fractal_index.json  .gitignore  README.md  main.py  pyproject.toml
docs/: prd.md  tasklist.md
src/agent/: agent.py  main.py  memory.py  memory_filter.py  state.py  tools.py  tui.py  utils.py
src/fractal/: __init__.py  cli.py
src/fractal/agent/: __init__.py  agent.py  main.py  memory_filter.py  prompt.py  state.py  tools.py  tui.py  utils.py
src/fractal/mcp/: db_mcp.py
src/fractal/rag_service/: __init__.py  rag.py
src/mcp/: db_mcp.py
src/rag_service/: rag.py
